--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="dark_grey">#2C2B2B</color>
     <color name="Orange">#FF9800</color>
     <color name="grey">#757171</color>
+    <color name="blackBlue">#03A9F4</color>
+    <color name="Figma_Black">#28323B</color>
 </resources>
